# MyPyTemplate

./: .gitattributes  .gitignore  MyPyTemplate.spec  MyPyTemplate_cli.py  README.md  pyproject.toml
.github/config/: .gitignore  README.md
.github/prompts/: ProjectInit.prompt.md
.github/workflows/: bump-version.yml  release-auto.yml  release-on-workflow-run.yml  test-and-deploy.yml
core/: gui.py  main.py  utils.py  version.py
hooks/: create_git_tag_from_changelog.py  update_version_from_changelog.py
resources/: requirements.txt
resources/.codeviz/: app-diagram.drawio
resources/docs/: AUTOMATED_TAGGING.md  CHANGELOG.md  srs.md  srvp.md
scripts/: build.ps1  build.sh  install.ps1  install.sh  test.ps1  test.sh  update_srvp.py
tests/: conftest.py  test_main.py  test_utils.py
